--- a/file1.css
+++ b/file1.css
@@ -357,6 +357,60 @@ background: #E55473;
 border-radius: 8px;
 }
 
+.footer_section{
+position: absolute;
+width: 1922px;
+height: 449px;
+left: -2px;
+top: 4418px;
+background: #111010;
+}
+
+.footer_section p:first-child{
+position: absolute;
+width: 259px;
+height: 58px;
+left: 829px;
+top: 100px;
+font-family: 'Lato';
+font-style: normal;
+font-weight: 800;
+font-size: 48px;
+line-height: 58px;
+color: #E55473;
+}
+
+.footer_section p:nth-child(2){
+position: absolute;
+width: 625px;
+height: 60px;
+left: calc(50% - 625px/2 - 1.5px);
+top: 200px;
+font-family: 'Lato';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 30px;
+text-align: center;
+color: rgba(255, 255, 255, 0.9);
+}
+
+.footer_section p:last-child{
+position: absolute;
+width: 355px;
+height: 19px;
+left: 782px;
+top: 300px;
+font-family: 'Lato';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+text-align: center;
+color: rgba(255, 255, 255, 0.4);
+}
 
 
-
+.flowers_section{
+    display: none;
+}
